Finish project in local configuration